Atualiza README, modifica HTML/CSS/JS e substitui meerkat.json por novas animações de clima

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Previsão do Tempo</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <main class="main">
         <h1>Previsão do Tempo</h1>
         <form action="">
-            <input type="text" placeholder="Digite a Cidade" id="cidade">
+            <input type="text" placeholder="Nome da cidade:" id="cidade">
             <button type="submit" id="buscar">Buscar</button>
         </form>
         <div id="res">
